# Scanning_bot

./: adb_connect_check.cpp  find_positions_node.cpp  former_env.txt  getmap.hpp  keyboard_map.cpp  sudo_test.txt  test.cpp  tsp.h  vector_test.cpp
autoexplorer/example/: autoexplorer_node.cpp
autoexplorer/include/: frontier_detector_dms.hpp  global_planning_handler.hpp  simple_navigation_goals.hpp
autoexplorer/launch/: autoexplorer.launch
autoexplorer/launch/includes/: global_plan_tesse.launch  move_base.launch  move_fetch.launch  move_former.launch  start_cartographer.launch  start_gmapping.launch  start_slam_toolbox.launch
autoexplorer/launch/includes/rviz_config/: autoexplorer.rviz
autoexplorer/param/: autoexploration.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
autoexplorer/src/: frontier_detector_dms.cpp  simple_navigation_goals.cpp
autoexplorer_param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
find_positions/: CMakeLists.txt  find_positions_node.cpp  getmap.hpp  package.xml
find_positions/example/: find_positions_node.cpp
find_positions/include/: find_positions_class.hpp  global_planning_handler.hpp
find_positions/launch/: find_positions.launch
find_positions/src/: find_positions_class.cpp  global_planning_handler.cpp  navfn.cpp
find_positions_class/: CMakeLists.txt
find_positions_class/example/: find_positions_node.cpp
find_positions_class/include/: find_positions_class.hpp
find_positions_class/src/: find_positions_class.cpp
former_bag/: autoexploration_bag.launch  octomapRT_bag.launch
former_base/: CMakeLists.txt  package.xml
former_base/config/: former.yaml
former_base/include/former_base/: former_base.h
former_base/launch/: base.launch  bringup.launch
former_base/launch/include/: d435.launch  sick_tim.launch
former_base/lib/: ros-melodic-roas-base_0.2.3-0bionic_amd64.deb  ros-melodic-roas-dock_0.2.0-0bionic_amd64.deb
former_base/rules/: 50-ps5.rules
former_base/src/: former_base.cpp
former_control/: CMakeLists.txt  package.xml
former_control/config/: control.yaml
former_control/launch/: control.launch
former_msgs/: CMakeLists.txt  package.xml
former_msgs/msg/: Feedback.msg
former_navigation/: CMakeLists.txt  package.xml
former_navigation/config/: costmap_common.yaml  move_base.yaml  teb_local_planner.yaml
former_navigation/launch/: move_base.launch  navigation.launch  slam.launch
former_ros/: CMakeLists.txt  package.xml
former_teleop/: CMakeLists.txt  package.xml
former_teleop/config/: ps5.yaml
former_teleop/include/former_teleop/: teleop_joy.h
former_teleop/launch/: teleop.launch
former_teleop/src/: teleop_joy.cpp
param/: costmap_common_params.yaml
param/param_teb/: costmap_common_params_former.yaml  teb_local_planner_params_former.yaml
param/param_teb (copy)/: costmap_common_params_former.yaml  local_costmap_params.yaml  teb_local_planner_params_former.yaml
param/param_teb_new/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
send_map/: CMakeLists.txt  package.xml
send_map/launch/: map.pgm  map.yaml  send_map.launch
send_map/src/: send_map_node.cpp
