<?xml version="1.0"?>
<package format="2">
  <name>former_base</name>
  <version>0.2.3</version>
  <description>
    The package for Former base system
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>former_msgs</depend>
  
  <depend>sick_tim</depend>
  <depend>realsense2_camera</depend>
  <depend>rgbd_launch</depend>
</package>