<?xml version="1.0"?>
<package format="2">
  <name>former_msgs</name>
  <version>0.2.3</version>
  <description>
    The ros messages for Former
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>