<?xml version="1.0"?>
<package format="2">
  <name>former_ros</name>
  <version>0.2.3</version>
  <description> 
    The meta package for Former 
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>former_base</exec_depend>
  <exec_depend>former_control</exec_depend>
  <exec_depend>former_description</exec_depend>
  <exec_depend>former_msgs</exec_depend>
  <exec_depend>former_navigation</exec_depend>
  <exec_depend>former_teleop</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>