<?xml version="1.0"?>
<package format="2">
  <name>former_teleop</name>
  <version>0.2.3</version>
  <description>
    The package for teleoperation
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>geometry_msgs</depend>
</package>